--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,12 +28,13 @@ body {
     position: relative;
     width: 294px;
     height: 318px;
-    background: #f00;
+    background: #606060;
     display: flex;
     justify-content: center;
     align-items: center;
     border-radius: .25rem;
     margin: 20px;
+    cursor: pointer;
   }
   
   .card::before {
@@ -44,7 +45,7 @@ body {
     width: 100%;
     height: 100%;
     border-radius: .25rem;
-    background: linear-gradient(315deg,#03a9f4,#ff0058);
+    background: linear-gradient(315deg,#000,#606060);
   }
   
   .card::after {
@@ -54,7 +55,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(315deg,#03a9f4,#ff0058);
+    background: linear-gradient(315deg,#000,#606060);
     filter: blur(30px);
   }
   
