--- a/assets/css/curriculos.css
+++ b/assets/css/curriculos.css
@@ -6,19 +6,42 @@
     margin: 0;
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
+    color: white;
+}
+
+html {
+    width: 100%;
 }
 
 body {
     width: 100%;
-    height: 100%;
     background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 .container {
+    margin-top: 2rem;
+    width: 75%;
     display: flex;
     justify-content: center;
     flex-direction: column;
     background-color: #202020;
+    padding: 1rem;
+    margin-bottom: 2.5rem;
+    border-radius: .50rem;
+}
+
+.img-perfil {
+    display: flex;
+    justify-content: center;
+}
+
+.img-perfil img {
+    width: 15rem;
+    border-radius: 50%;
 }
 
 .title-info {
@@ -37,28 +60,124 @@ body {
     gap: 1rem;
 }
 
-.info svg {
+.info svg path {
     color: #007dab;
 }
 
 .resume {
     text-align: justify;
+    margin-bottom: 2rem;
 }
 
 body h4 {
     color: #007dab;
 }
 
+.experience h1 {
+    margin-bottom: 1rem;
+}
+
+.experience-work {
+    margin-bottom: 1rem;
+}
+
+.experience-work h4 {
+    margin-bottom: .5rem;
+}
+
+.experience-work ul {
+    padding-top: .5rem;
+    padding-left: 1rem;
+}
+
+.experience-work ul li {
+    margin-bottom: .5rem;
+}
+
 .experience-work span {
     font-weight: bold;
 }
 
-.skill ul {
-    display: flex;  
-    width: 100%; 
+.skill{
+    width: 100%;
+    margin-bottom: 2rem;
 }
 
-.skill ul li {
+.skill-info {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.skill-info ul {
+    display: flex;
+    width: 100%;
+    padding-top: 1rem;
+    padding-left: 1rem;
+}
+
+.skill-info ul li {
+    width: 100%;
+    margin-right: 4rem;
+}
+
+.formation {
+    margin-bottom: 1rem;
+}
+
+.formation h1 {
+    margin-bottom: 1rem;
+}
+
+.formation-itens {
+    margin-bottom: 1rem;
+}
+
+.formation-itens h4 {
+    margin-bottom: .5rem;
+}
+
+.certification h1{
+    margin-bottom: 1rem;
+}
+
+.certification-itens {
+    margin-bottom: 1rem;
+}
+
+.certification-itens li {
+    text-decoration: none;
+    list-style: none;
+    color: #007dab;
+    margin-bottom: .2rem;
+}
+
+.activity {
+    margin-bottom: 2rem;
+}
+
+.activity h1 {
+    margin-bottom: 1rem;
+}
+
+.activity ul {
+    padding-left: 1rem;
+    display: flex;
+}
+
+.activity ul li {
     margin-right: 2rem;
 }
 
+.button-return {
+    margin-bottom: 2.5rem;
+}
+
+.button-return button {
+    padding: .5rem 1rem;
+    cursor: pointer;
+    background-color: #007dab;
+    border-radius: .25rem;
+    border: none;
+}
