--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@
 body {
     width: 100%;
     height: 100vh;
-    background-image: url('/assets/images/background.jpg');
+    background-color: black;
     background-size: cover;
     background-repeat: no-repeat;
     display: flex;
@@ -20,14 +20,19 @@ body {
     align-items: center;
 }
 
+body h1 {
+  color: white;
+}
+
 .container {
     display: flex;
+    width: 100%;
 }
 
   .card {
     position: relative;
-    width: 294px;
-    height: 318px;
+    width: 18.34rem;
+    height: 19.87rem;
     background: #606060;
     display: flex;
     justify-content: center;
@@ -101,16 +106,16 @@ body {
     position: relative;
     color: #fff;
     font-weight: 500;
-    line-height: 1em;
-    font-size: 1em;
-    letter-spacing: 0.1em;
+    line-height: 1rem;
+    font-size: .7rem;
+    letter-spacing: 0.1rem;
     text-transform: uppercase;
     text-align: center;
   }
   
   .content .title span {
     font-weight: 300;
-    font-size: 0.70em;
+    font-size: 0.45rem;
   }
   
   .content .sci {
