--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,11 +22,11 @@ body {
 
 body h1 {
   color: white;
+  margin-top: 5rem;
 }
 
 .container {
     display: flex;
-    width: 100%;
 }
 
   .card {
@@ -154,6 +154,40 @@ body h1 {
   .sci li a:hover {
     fill: currentColor;
     color: rgba(255, 255, 255, 1);
+  }
+
+  @media (max-width: 1760px) {
+    .container {
+      width: 100%;
+      height: 100vh;
+      display: grid;
+      grid-template-columns: 2fr 2fr 2fr;
+      justify-items: center;
+      align-items: center;
+    }
+  }
+
+  @media (max-width: 1024px) {
+    .container {
+      width: 100%;
+      display: grid;
+      grid-template-columns: 2fr 2fr;
+      justify-items: center;
+      align-items: center;
+    }
+  }
+
+  @media (max-width: 740px) {
+    .container {
+      display: grid;
+      grid-template-columns: 4fr;
+    }
+  }
+
+  @media (max-width: 350px) {
+    body h1 {
+      text-align: center;
+    }
   }
 
   
